# GramEm

./: CHANGELOG.md  CODE_OF_CONDUCT.md  GramEm - Emotion Classification Model (BERT).ipynb  GramEm - Grammar Correction Model (T5).ipynb  GramEm.html  LICENSE  README.md  pyproject.toml
GramEm - Pre Trained Model/: DockerFile  GramEm.py  Mapping.py  README.md
Training Datasets/: emotion_dataset.csv  grammar_dataset.csv  grammar_dataset_expanded.csv
docs/: api.md  examples.md  index.md
examples/: cli_demo.py
github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
github/workflow/: test.yml
gramem_basic/: __init__.py  cli.py  core.py
tests/: test_core.py
